# agi-personal-memory

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CURRENT_STATUS.md  DIARY.md  Dockerfile  LICENSE  README.md  VISION.md  agim_roadmap_v0_to_v10.md  benchmark_2k.json  benchmark_results.json  counterfact_200_final.py  experiments_cd.py  locomo_gpt_full.json  locomo_leaderboard.md  pyproject.toml  rome_wal_ffn_v2.py  sweep.py  sweep_antibost.py  sweep_dual_params.py  test_dual_layer.py  test_ffn_edit.py  test_remaining_ideas.py
.agim_plugins/: index.json
backlog/: runtime_backlog.md
data/: raw_text_updates.jsonl
docs/: AUDIT_IMPLEMENTATION_PLAN.md  CLAIMS_AND_EVIDENCE.md  EASYEDIT_ADAPTER.md  EASYEDIT_PROTOCOL.md  HOW_TO_VERIFY.md  PATH_A_MEMORY.md  PATH_B_COMPLETION_AUDIT.md  PATH_B_GATE5_PUBLIC_CONTRACT.md  PATH_B_MAX_ACTION_PLAN.md  PATH_B_MAX_AUDIT_CHECKLIST.md  PATH_B_MAX_COMPLETION_AUDIT.md  PATH_B_MAX_COMPLETION_MATRIX.md  PATH_B_MAX_CURRENT_MAX_PLAN_2026-05-18.md  PATH_B_MAX_EXECUTION_BLUEPRINT.md  PATH_B_MAX_EXECUTION_CHECKLIST.md  PATH_B_MAX_EXECUTION_LEDGER.md  PATH_B_MAX_EXECUTION_MANIFEST.md  PATH_B_MAX_EXECUTION_RUNBOOK.md  PATH_B_MAX_GATE_COMMANDS.md  PATH_B_MAX_HARDGATE_QUEUE.md  PATH_B_MAX_MAX_AUDIT.md  PATH_B_MAX_MAX_PLAN.md  PATH_B_MAX_MAX_PLAN_FROM_REPORT.md  PATH_B_MAX_NEXT_PHASE.md  PATH_B_MAX_PLAN.md  PATH_B_MAX_PROMPT_ARTIFACT_AUDIT.md  PATH_B_MAX_PROMPT_TO_ARTIFACT_AUDIT_MATRIX.md  PATH_B_MAX_STATUS_BOARD.md  PATH_B_PRODUCTIZATION_PLAN.md  PATH_B_WEIGHT_EDITING.md  ROADMAP_REALISTIC.md  STEP_BY_STEP_GUIDE.md  VERIFY_PATH_A.md  VERIFY_PATH_B_CURRENT.md  VERIFY_PATH_B_LEGACY.md  index.html
results/: COUNTERFACT_FINAL_REPORT.md  README.md  agim_benchmark_results.md  agim_leaderboard.md  counterfact_final_wal_instruct_200_wal.json  counterfact_hardened_50.json  counterfact_honest_wal_200.json  counterfact_rome_200_rome.json  dual_200.json  easyedit_agim_status_2026-05-18.md  easyedit_official_50_contextual_neg.json  easyedit_official_50_contextual_neg4_metrics.json  easyedit_official_50_contextual_neg4_seq_lm012_noeosanti.json  easyedit_official_50_contextual_neg4_seq_lm015_noeosanti.json  easyedit_official_50_contextual_neg4_sequential_noeosanti.json  easyedit_official_50_contextual_neg4x05_seq_lm012_noeosanti.json  easyedit_official_50_contextual_neg4x05_seq_lm015_noeosanti.json  easyedit_official_50_contextual_neg4x05_seq_lm020_noeosanti.json  easyedit_vs_our_protocol.md  experiment_matrix.md  mquake_rome.json  official_eval_100.json  official_eval_1000.json  swap_results.json  (+3 more)
(+517 files in other folders)
