[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agim"
version = "0.1.0"
description = "AGI Personal Memory — accumulative verified memory substrate for language models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
optional-dependencies = { dev = ["pytest", "black", "mypy"], hf = ["transformers>=4.57", "torch>=2.0", "accelerate"] }

[project.scripts]
agim = "agim.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "slow: long-running tests",
    "gpu: tests requiring CUDA or large local model weights",
    "llama: tests requiring local Llama weights",
    "gemma: tests requiring local Gemma weights and compatible Transformers",
]
