[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agim"
version = "0.2.0a1"
description = "AGI Personal Memory — accumulative verified memory substrate for language models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.0",
    "transformers>=4.57",
    "accelerate",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
eval = ["datasets", "nltk", "requests", "scipy"]
dev = ["pytest", "black", "mypy", "ruff"]

[project.scripts]
agim = "agim.cli.main:main"
agim-easyedit = "agim.eval.easyedit_official_runner:main"
agim-local-counterfact = "agim.eval.easyedit_counterfact:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "slow: long-running tests",
    "gpu: tests requiring CUDA or large local model weights",
    "llama: tests requiring local Llama weights",
    "gemma: tests requiring local Gemma weights and compatible Transformers",
]
